--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 17px;
     color: #05070d;
-    line-height: 2;
+    line-height: 1.7;
 }
 
 .p-white{
@@ -48,7 +48,7 @@ header{
 
 /* Header area */
 .site-header {
-  padding: 24px 20px;
+  padding: 10px 20px;
 }
 
 
@@ -371,8 +371,9 @@ body{
 }
 
 .image-container{
-  width: 100%;
+  width: auto;
   height: auto;
+  max-width: 50vh;
   object-fit: contain;
   justify-content: center;
   align-items: center;
